Bug #2186 - Accessibility : 2011 Theme links and H2 fail contrast checker
Additional tweaks to fix contrast checker errors

--- a/wp-content/mu-plugins/theme-fixes/twentyeleven.css
+++ b/wp-content/mu-plugins/theme-fixes/twentyeleven.css
@@ -149,6 +149,6 @@ input.searchsubmit {
     box-shadow: inset 0px 1px 1px rgba(0, 0, 0, 0.1);
     color: #bfddf3;
 }
-widget ul li {
+.widget ul li {
     color: #000;
 }
